--- a/themes/bootstrap/css/add.css
+++ b/themes/bootstrap/css/add.css
@@ -9,6 +9,9 @@
     font-style: normal;
 
 }
+body{   
+    font-family: 'Ubuntu', sans-serif !important;
+}
 .copperplate{
     font-family: copperplate;
 }
@@ -89,7 +92,6 @@
 .modalidades{
     color:#666;
     font-size: 18px;
-    font-weight: bold;
     transition: 0.5s;  
 }
 .modalidades:hover{
