Foi alterado o topo e o rodapé do site para se enquadrar no tamanho

--- a/themes/bootstrap/css/add.css
+++ b/themes/bootstrap/css/add.css
@@ -38,11 +38,8 @@ body{
 }
 .navbar{
      font-family: copperplate !important;
-     font-size:18px !important;
+     font-size:16px !important;
      background: #fff !important;
-}
-.nav{
-    float:right !important;
 }
 .nav li{
         line-height: 40px !important;
@@ -53,7 +50,11 @@ body{
     box-shadow: none !important;
     
 }
-
+.navbar-inner{
+    max-width: 960px;
+    margin: 0 auto;
+    overflow: hidden;
+}
 .logotopo{
     margin-top:20px;
 }
@@ -76,18 +77,15 @@ body{
 
 .rodape{
     background:#ccc;
-    height: 220px;
+    height: 150px;
 }
 .logorodape{
     margin-top: 35px;
 }
 .direitos{
     background: #000;
-    font-size:20px;
     color:#fff;
-    height: 47px;
     display: block;
-    line-height: 47px;
 }
 .modalidades{
     color:#666;
