--- a/themes/bootstrap/css/myCarousel_skin2.css
+++ b/themes/bootstrap/css/myCarousel_skin2.css
@@ -11,7 +11,7 @@
 
 .jcarousel-container-horizontal {
     /*width: 245px;*/
-    padding: 20px 40px;
+    padding: 20px 40px 0;
 }
 
 .jcarousel-container-vertical {
@@ -26,7 +26,7 @@
 
 .jcarousel-clip-horizontal {
     /*width:  245px;*/
-    max-height: 200px;
+    max-height: 300px;
 }
 
 .jcarousel-clip-vertical {
