--- a/themes/bootstrap/css/add.css
+++ b/themes/bootstrap/css/add.css
@@ -130,3 +130,25 @@ body{
 #page{
     max-width: 960px;
 }
+.logotopo
+{
+    padding: 0;
+    top:0 !important;
+    width:180px;
+    border: 1px #000 solid;
+}
+#yw1{
+    border: 1px black solid !important; 
+}
+
+.navbar .brand{
+    padding-right: 0 !important;
+    top: 0 !important;
+    left:0 !important;
+}
+
+.navbar-inner
+{
+    /*background-color: blue !important;*/
+    box-shadow  : 0 0 5px black !important;
+}
