Foi arrumado o menu no topo com a Logo

--- a/themes/bootstrap/css/add.css
+++ b/themes/bootstrap/css/add.css
@@ -12,6 +12,9 @@
 body{   
     font-family: 'Ubuntu', sans-serif !important;
 }
+.container{
+    max-width: 960px;
+}
 .copperplate{
     font-family: copperplate;
 }
@@ -35,23 +38,24 @@ body{
 .brand{
     font-size: 37px !important;
     line-height:40px;
+    padding: 0px !important
 }
 .navbar{
      font-family: copperplate !important;
      font-size:16px !important;
      background: #fff !important;
 }
+.navbar .nav{
+    margin-top:10px !important;
+    margin-left:29px !important;
+}
 .nav li{
         line-height: 40px !important;
-
 }
 .navbar .nav > .active > a, .navbar .nav > .active > a:hover, .navbar .nav > .active > a:focus, .navbar-inner{
     background: none !important;
     box-shadow: none !important;
     
-}
-.logotopo{
-    margin-top:20px;
 }
 .menutopo{
  list-style: none;
@@ -73,9 +77,6 @@ body{
 .rodape{
     background:#ccc;
     height: 150px;
-}
-.logorodape{
-    margin-top: 35px;
 }
 .direitos{
     background: #000;
@@ -129,26 +130,13 @@ body{
 
 #page{
     max-width: 960px;
+    padding-top:75px !important;
 }
 .logotopo
 {
-    padding: 0;
-    top:0 !important;
     width:180px;
-    border: 1px #000 solid;
 }
-#yw1{
-    border: 1px black solid !important; 
-}
-
-.navbar .brand{
-    padding-right: 0 !important;
-    top: 0 !important;
-    left:0 !important;
-}
-
 .navbar-inner
 {
     /*background-color: blue !important;*/
-    box-shadow  : 0 0 5px black !important;
 }
